# unstructured_mapping

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  backlog.md  backlog.md.tmp.45896.1775918742983  changelog.md  docker-compose.yml  nginx.conf  pyproject.toml  pyproject.toml.tmp.45896.1775926151953
.claude/: settings.json
.claude/commands/: db-health.md  improvements.md  optimize.md  refactor.md  self-refinement.md
.claude/hooks/: block-chained-commands.sh  block-raw-python.sh  format-python.sh
.claude/rules/: backlog.md  committing.md  documentation.md  improvements.md  optimization-areas.md  optimization.md  refactoring.md  shell.md  testing.md  versioning.md
.pre-commit-scripts/: check_unstaged_claude.py
changelog/: 2026.md
data/: knowledge.db
data/seed/: financial_entities.json
docs/: knowledge_graph.md
docs/examples/: queries.sql
docs/knowledge_graph/: design.md  relationships.md  schema.md  subtypes.md  validation.md
docs/pipeline/: 01_design.md  02_models.md  03_llm_interface.md  05_resolution.md  06_prompts.md  07_budget.md  08_llm_parsers.md  09_chunking.md  10_orchestration.md  11_extraction.md  12_kg_population.md  13_cold_start.md  budget.md  chunking.md  design.md  detection.md  llm_interface.md  llm_parsers.md  models.md  orchestration.md  prompts.md  resolution.md
docs/seed/: reproducibility.md  wikidata.md
frontend/: Dockerfile  package-lock.json  package.json
src/unstructured_mapping/: __init__.py  storage_base.py  tokens.py
tests/unit/: conftest.py  test_aggregation.py  test_backfill.py  test_budget.py  test_cli_audit_aliases.py  test_cli_audit_provenance.py  test_cli_backfill.py  test_cli_benchmark_cold_start.py  test_cli_db_health.py  test_cli_db_helpers.py  test_cli_export.py  test_cli_ingest.py  test_cli_populate.py  test_cli_preview.py  test_cli_run_diff.py  test_cli_run_report.py  test_cli_seed.py  test_cli_subgraph.py  test_cold_start.py  (+24 more)
(+133 files in other folders)
