[project]
name = "unstructured-mapping"
version = "0.7.3"
description = "Map well-defined knowledge-graph entities to unstructured text."
authors = [{ name = "Carlos Pinto", email = "carlospinto4p@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.13.0",
]

[project.optional-dependencies]
scraping = [
    "trafilatura>=2.0.0",
    "googlenewsdecoder>=0.1.0",
]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 78
